--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
         then the triangle is iscosceles.</li>
         <li><span class="cat-triangles">Equilateral</span>If all three sides are
         the same then the triangle is equilateral.</li>
-        <li>Scalene.</li>
-        <li>the sum of any two sides of the triangle is equal to or less than the third remaining side</li>
-
+        <li><span class="cat-triangles">Scalene:</span>If none of the three side 
+          match in size then the triangle is scalene.</li>
+        <li><span class="cat-triangles">Not a triangle</span>Unless the sum of 
+          any two sides of the triangle is equal to or less than the 
+          third remaining side, then a triangle cannot be formed.</li>
         </ul>
     </div>
 
