-Adds spaces and colon
-Adds spacing and colons within list items in description.

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
       determine whether a triangle meets the following criteria:
     </p>
       <ul>
-        <li><span class="cat-triangles">Isosceles</span>. If two sides are the same
+        <li><span class="cat-triangles">Isosceles:</span> If two sides are the same
         then the triangle is iscosceles.</li>
-        <li><span class="cat-triangles">Equilateral</span>If all three sides are
+        <li><span class="cat-triangles">Equilateral:</span> If all three sides are
         the same then the triangle is equilateral.</li>
-        <li><span class="cat-triangles">Scalene:</span>If none of the three side 
+        <li><span class="cat-triangles">Scalene:</span> If none of the three side 
           match in size then the triangle is scalene.</li>
-        <li><span class="cat-triangles">Not a triangle</span>Unless the sum of 
+        <li><span class="cat-triangles">Not a triangle:</span> Unless the sum of 
           any two sides of the triangle is equal to or less than the 
           third remaining side, then a triangle cannot be formed.</li>
         </ul>
