--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
    <div>
          <input type='button' class="button-submit" onclick='checkTriangle()' value='Triangle Checker' />
     </div>
-    
+    <div id="checkresults"></div>
     
   </div>
  
